# Theory-First

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: USAGE.md  USAGE.zh-CN.md
evals/: FORWARD_TEST_REPORT.md  VALIDATION.md  cases.json  collisions.json
evals/examples/smart-traffic-management/: COMPARISON.md  COMPARISON.zh-CN.md  DEEP_RESEARCH_BASELINE.md  PRIMARY_AXES.md  PROMPT.md  README.md  README.zh-CN.md  RUBRIC.md  RUN_LOG.md  RUN_MANIFEST.json  THEORY_FIRST_LANDSCAPE.md  THEORY_FIRST_PACKET.md  THEORY_FIRST_PREREGISTRATION_GATE.md
evals/examples/smart-traffic-management/scorecards/: ORDINARY_RESEARCH_SCORECARD.md  THEORY_FIRST_SCORECARD.md
evals/examples/smart-traffic-management/source-audits/: ault-sharon-2021.md  gregoire-et-al-2015.md  liu-gayah-levin-2024.md  sumo-output-docs-2026-07-15.md  varaiya-2013.md
examples/: theory-first-walkthrough.md  theory-fix-walkthrough.md
plugins/theory-first/: STATUS_MODEL.md
plugins/theory-first/.claude-plugin/: plugin.json
plugins/theory-first/.codex-plugin/: plugin.json
plugins/theory-first/skills/close-literature/: SKILL.md
plugins/theory-first/skills/close-literature/agents/: openai.yaml
plugins/theory-first/skills/close-literature/references/: closure-packet.md
plugins/theory-first/skills/deep-read-paper/: SKILL.md
plugins/theory-first/skills/deep-read-paper/agents/: openai.yaml
plugins/theory-first/skills/deep-read-paper/references/: acquisition-and-safety.md  reading-note-template.md
plugins/theory-first/skills/deep-read-paper/scripts/: paper_source.py
plugins/theory-first/skills/deep-read-paper/tests/: test_paper_source.py
plugins/theory-first/skills/map-research-landscape/: SKILL.md
plugins/theory-first/skills/map-research-landscape/agents/: openai.yaml
plugins/theory-first/skills/map-research-landscape/references/: landscape-map.md
plugins/theory-first/skills/preregister-claim/: SKILL.md
plugins/theory-first/skills/preregister-claim/agents/: openai.yaml
plugins/theory-first/skills/preregister-claim/references/: preregistration-template.md
plugins/theory-first/skills/stress-test-claim/: SKILL.md
plugins/theory-first/skills/stress-test-claim/agents/: openai.yaml
plugins/theory-first/skills/stress-test-claim/references/: tripwires.md
plugins/theory-first/skills/theory-first/: SKILL.md
plugins/theory-first/skills/theory-first/agents/: openai.yaml
plugins/theory-first/skills/theory-first/references/: project-profile.md
plugins/theory-first/skills/theory-fix/: SKILL.md
plugins/theory-first/skills/theory-fix/agents/: openai.yaml
profiles/: README.md  project-profile.example.yaml
scripts/: __init__.py  sync_portable_resources.py  verify_python_distribution.py
src/theory_first/: __init__.py  bundle.py  cli.py  installer.py
tests/: test_distribution_verifier.py  test_paper_source_integration.py  test_python_package.py  test_repository_contract.py
(+2 files in other folders)
